Particle Edit Selection tools do not disable the combing tools #62223

Closed
opened 2019-03-05 17:48:57 +01:00 by William Reynish · 4 comments

System Information
Operating system: macOS 10.14

Blender Version
Broken Blender 2.80 beta 2019-03-05

Short description of error
Particle Edit Selection tools do not disable the combing tools

Exact steps for others to reproduce the error

  • New file from factory defaults
  • Add standard hair particle system. Default settings.
  • Switch to Particle Edit Mode (By default the Comb tool is active)
  • Switch to the Box Select tool
  • Click and drag in the viewport to select.
  • Instead of selecting, the previous tool overrides it. In this case the Comb tool

The only way to make the selection tools work, is to first set the tool to None, then choose any of the selection tools.

You can see here, that with the Box Select tool active, you still see the tool settings for the Comb tool too:
Screenshot 2019-03-05 at 17.42.31.png

Demo file
particle_edit_bug.blend

**System Information** Operating system: macOS 10.14 **Blender Version** Broken Blender 2.80 beta 2019-03-05 **Short description of error** Particle Edit Selection tools do not disable the combing tools **Exact steps for others to reproduce the error** - New file from factory defaults - Add standard hair particle system. Default settings. - Switch to Particle Edit Mode (By default the Comb tool is active) - Switch to the Box Select tool - Click and drag in the viewport to select. - Instead of selecting, the previous tool overrides it. In this case the Comb tool The only way to make the selection tools work, is to first set the tool to None, then choose any of the selection tools. You can see here, that with the Box Select tool active, you still see the tool settings for the Comb tool too: ![Screenshot 2019-03-05 at 17.42.31.png](https://archive.blender.org/developer/F6767020/Screenshot_2019-03-05_at_17.42.31.png) Demo file [particle_edit_bug.blend](https://archive.blender.org/developer/F6767026/particle_edit_bug.blend)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Campbell Barton was assigned by William Reynish 2019-03-05 17:49:08 +01:00

This issue was referenced by 37fa8b0cf9

This issue was referenced by 37fa8b0cf9e4ba0e21a4d807db79841eca1a1e08

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by c80415627e

This issue was referenced by c80415627e9c8e1d4eb74a34a0916126a0e9fc1a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62223
No description provided.