Fix T62223: Particle brushes disable select tools